# universal-groth16

./: .gitignore  BENCHMARKS.md  README.md  go.mod  go.sum
circom/: converter.go  pipeline.go  r1cs_parser.go  r1cs_parser_test.go  risc0_test.go  witness.go
circuits/twostage/: circuit.go  circuit_test.go
circuits/unified/: circuit.go
e2e/: e2e_test.go
examples/verifiable-encryption/: .gitignore  README.md
examples/verifiable-encryption/bridge/: Cargo.toml
examples/verifiable-encryption/common/: Cargo.toml
examples/verifiable-encryption/go/: benchmark_full_test.go  benchmark_test.go  bridge.go  verify.go  verify_test.go
examples/verifiable-encryption/host/: Cargo.toml
examples/verifiable-encryption/risc0-verenc/: Cargo.toml
examples/verifiable-encryption/risc0-verenc/host/: Cargo.toml
examples/verifiable-encryption/risc0-verenc/host/src/: main.rs
examples/verifiable-encryption/sp1-verenc/script/: Cargo.toml
groth16wrapper/: README.md  circuit.go  circuit_test.go
risc0bridge/: bridge.go  bridge_test.go  srs_sizing.go
sp1bridge/: bridge.go  bridge_test.go
srs/: srs.go
srs/cmd/download/: main.go
tsc-frontend/: index.html  package-lock.json  package.json  vite.config.ts
tsc-frontend/src/: App.css  App.tsx  ceremony.ts  index.css
webgpu-phase2/: PLAN.md  PRIMITIVES.md  README.md  package-lock.json  package.json  tsconfig.json
webgpu-phase2/src/: constants.ts  crypto.ts  index.ts
webgpu-phase2/test/: crypto.test.ts  endian.test.ts  parse-serialize.test.ts  phase2_update.test.ts
webgpu-phase2/testvectors/: phase2_vectors.json
(+27 files in other folders)
