[package]
name = "risc0-verenc-host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^3.0.3" }
risc0-groth16 = { version = "^3.0.3", features = ["prove"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
hex = "0.4"
verenc-common = { path = "../../common" }
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }