[package]
version = "0.1.0"
name = "verenc-sp1-script"
edition = "2021"
default-run = "verenc-sp1"

[[bin]]
name = "verenc-sp1"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = { version = "6.0.0-beta.1", features = ["blocking", "native-gnark"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = "1.3"
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4.3"
verenc-sp1-lib = { path = "../lib" }
dotenv = "0.15.0"

[build-dependencies]
sp1-build = { version = "6.0.0-beta.1" }
